--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,8 @@ _img_src/*
 application/cache/*
 application/cache/!index.html
 */logs/log-*.php
+public/upload/avatar/!index.html
+public/upload/media/*/*
+public/upload/media/*/!index.html
+public/upload/unzip/!index.html
 todo.txt
-public/upload/media/*
